--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,3 +1,12 @@
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 63rem;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .btn {
   border: none;
   font-family: inherit;
@@ -12,9 +21,24 @@
   }
 
   &__container {
-    margin-top: 3rem;
+    margin-top: $margin-top-small;
     border-radius: 100px;
     display: flex;
     gap: 3rem;
+  }
+}
+
+.picture {
+  margin-top: $margin-top-medium;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 30rem;
+
+  &__icon {
+    width: 5rem;
+    height: 5rem;
   }
 }
